Fixed #24, better link color in dark mode

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -116,6 +116,12 @@ a {
   text-decoration: underline;
 }
 
+@media (prefers-color-scheme: dark) {
+  a {
+    color: var(--link-color);
+  }
+}
+
 ol, ul {
   margin-top: 1rem;
   padding-left: 2rem;
